--- a/WebApp/Views/HealthCareTeam/Index.cshtml
+++ b/WebApp/Views/HealthCareTeam/Index.cshtml
@@ -80,7 +80,7 @@
             $(function () {
                 new PNotify({
                     title: 'Error',
-                    text: "@ViewBag.errorMessage",
+                    text: '@ViewBag.errorMessage',
                     type: 'error',
                     styling: 'bootstrap3'
                 });
@@ -165,8 +165,16 @@
 
                                 </div>
                             </div>
-                            <div style="display:none"class="x_panel">
-                                <div class="x_title">
+                            <div class="x_panel" id="chkboxsearchdoctor">
+                                <div id="divshowAll" class="checkbox" style="display: inline-block;">
+                                    <label style="margin-top: 0px;margin-bottom: 10px;margin-left: -15px;width: 250px;">
+                                        <input name="showAll" id="chekshowAll" type="checkbox" class="flat">&nbsp; Show Search Doctor Panel
+
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="x_panel">
+                                <div class="x_title" style="display:none" id="divsearchtitle">
                                     <h2>Search Doctor</h2>
                                     <ul class="nav navbar-right panel_toolbox">
                                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
@@ -174,7 +182,7 @@
                                     <div class="clearfix"></div>
                                 </div>
 
-                                <div class="x_content">
+                                <div class="x_content" style="display:none" id="divsearchdoctor">
                                     <div class="row">
 
                                         <div class="col-md-4 col-sm-6 col-xs-12">
@@ -253,24 +261,24 @@
                             </div>
 
 
-                            <div id="maindiv"></div>
-                            <div class="x_panel" id="mainpanel">
-                                <div class="x_title">
-                                    <h2>Doctor Result</h2>
-                                    <ul class="nav navbar-right panel_toolbox">
+    <div id="maindiv"></div>
+    <div class="x_panel" id="mainpanel" style="display:none">
+        <div class="x_title">
+            <h2>Doctor Result</h2>
+            <ul class="nav navbar-right panel_toolbox">
 
-                                        <li>
-                                            <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                        </li>
-                                    </ul>
-                                    <div class="clearfix"></div>
-                                </div>
-                                <div class="x_content according-defalut-close" style="float: none;" id="doctorList">
-                                    <ul class="doctor_details" id="docList"></ul>
+                <li>
+                    <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                </li>
+            </ul>
+            <div class="clearfix"></div>
+        </div>
+        <div class="x_content according-defalut-close" style="float: none;" id="doctorList">
+            <ul class="doctor_details" id="docList"></ul>
 
-                                </div>
-                            </div>
-                        </div>@*step1*@
+        </div>
+    </div>
+</div>@*step1*@
 
                         <input type="text" style="display:none" id="pvdocid" value="0">
                         <div class="modal fade" id="myModal8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel8">
@@ -800,6 +808,22 @@
 </div>
 
 <script>
+
+    $(document).ready(function(){
+        $('#divshowAll').on('ifChecked', 'input', function (event) {
+            $('#divsearchtitle').css('display', 'block');
+            $('#divsearchdoctor').css('display', 'block');
+            
+        });
+
+        $('#divshowAll').on('ifUnchecked', 'input', function (event) {
+            $('#divsearchtitle').css('display', 'none');
+            $('#divsearchdoctor').css('display', 'none');
+            $('#mainpanel').css('display', 'none');
+        });
+    });
+
+
     var doctorId;
     function reloadContainer(callback) {
         $("#mycareteam").load('@Url.Action("MyCareTeam", "SeeDoctor")', function () {
@@ -871,59 +895,68 @@
                     document.getElementById("docInfo").innerHTML = tableHtml;
                 }
                 var oDocInfo = null;
+                if (appType == "L"){
                 for (var i = 0; i < availableDoctors.doctor.length; i++) {
                     if (availableDoctors.doctor[i].docId == _selecteddoctorID) {
                         oDocInfo = availableDoctors.doctor[i];
                         break;
                     }
                 }
+            }
                 debugger;
-                if(oDocInfo==null){
-
+                if((oDocInfo==null) && (appType=="L")){
+                    var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + _selecteddoctorID + '&message=Doctor-is-offline-for-live-call';
+                    $.post(cCallLogUrl);
                     new PNotify({
                         title: 'Oops, Doctor is Offline!!!',
                         text: "Sorry, the doctor is offline now. Please select any other doctor before making payment.",
                         type: 'error',
                         styling: 'bootstrap3'
                     });
-                    $('#wizard').smartWizard('goToStep', 1);
+                    //  $('#wizard').smartWizard('goToStep', 1);
 
 
 
                 }
-
                 else{
-                //Stripe Initialization after getting consultCharges of selected doctor
-                var amount=response.Object.consultCharges*100;
-                var oStripePayCheckout = new StripePayCheckout({
-                    publisherKey: '@publisherKey',
-                    amount: amount,
-                    targetButton: "#btnProceedWithPayment",
-                    actionUrl: '@Url.Action("ProceedWithPay", "seedoctor")',
-                    handleSuccess: function () {
-                        console.log('Payment Done...');
-                        new PNotify({
-                            title: 'Success',
-                            text: "$"+amount/100+" has been  charged successfull.",
-                            type: 'info', addclass: 'dark',
-                            styling: 'bootstrap3'
-                        });
-                         var cCallLogUrl = '@Url.Action("PaymentSuccessLog", "UserChat")?doctorId=' +  $("#doctorid").val();
-                         $.post(cCallLogUrl);
-                        showLoader();
-                        CreateAppointment(@ViewBag.PatienID,@amount);
-                    },
-                    handleFailure: function () {
-                        var cUrl = '/UserChat/PaymentFailLog?doctorId=' + $("#doctorid").val();
-                        $.post(cUrl);
-                        showAlert("Alert","Stripe Payment Failed!!!");
-                        return;
-                        //alert("OOPS! Some thing goes wrong. User can be redirected to appropriate page.");
-                    }
-                });
+                    //Stripe Initialization after getting consultCharges of selected doctor
+                    var amount=response.Object.consultCharges*100;
+                    var oStripePayCheckout = new StripePayCheckout({
+                        publisherKey: '@publisherKey',
+                        amount: amount,
+                        targetButton: "#btnProceedWithPayment",
+                        actionUrl: '@Url.Action("ProceedWithPay", "seedoctor")',
+                        handleSuccess: function () {
+                            console.log('Payment Done...');
+                            new PNotify({
+                                title: 'Success',
+                                text: "$"+amount/100+" has been  charged successfull.",
+                                type: 'info', addclass: 'dark',
+                                styling: 'bootstrap3'
+                            });
 
-                oStripePayCheckout.initialize();
-            }
+                            var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + $("#doctorid").val() + '&message=Patient-paid-successfully';
+                            $.post(cCallLogUrl);
+                            showLoader();
+                            CreateAppointment(@ViewBag.PatienID,@amount);
+                        },
+                        handleFailure: function () {
+                            var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + $("#doctorid").val() + '&message=Patient-payment-failed';
+                            $.post(cCallLogUrl);
+                            showAlert("Alert","Stripe Payment Failed!!!");
+                            new PNotify({
+                                title: 'Payment Failed',
+                                text: "Stripe Payment Failed!!!",
+                                type: 'error',
+                                styling: 'bootstrap3'
+                            });
+                            return;
+                            //alert("OOPS! Some thing goes wrong. User can be redirected to appropriate page.");
+                        }
+                    });
+
+                    oStripePayCheckout.initialize();
+                }
 
             },
             error: errorRes
@@ -932,7 +965,7 @@
 
     }
     $(document).ready(function () {
-        if('@SessionHandler.UserInfo.timeZone'=='')
+        @*if('@SessionHandler.UserInfo.timeZone'=='')
         {
             new PNotify({
                 title: 'Info',
@@ -942,7 +975,7 @@
             });
             window.location = '@Url.Action("Index","PatientProfile")';
 
-        }
+        }*@
         GetAllLanguages();
         GetAllSpecialities();
         GetROV('@SessionHandler.UserInfo.Id');
@@ -977,6 +1010,7 @@
 
    function CreateAppointment(patientID,amount)
    {
+       debugger;
          _objAppointment["appDate"] = $("#fetchdate").val();
         _objAppointment["doctorID"] = $("#doctorid").val();
         _objAppointment["patientID"] = patientID;
@@ -1001,39 +1035,31 @@
             dataType: 'text',
             data: 'inputModel='+ JSON.stringify(_objAppointment),
             success: function (response) {
-
-                if(response.Message!=undefined)
+                var result=JSON.parse(response);
+                if(result.Message!=undefined)
                 {
                     hideLoader();
                     new PNotify({
                         title: 'Error',
-                        text: response.Message.ReasonPhrase,
+                        text: result.Message.ReasonPhrase,
                         type: 'error',
                         styling: 'bootstrap3'
                     });
                 }
-                var result=JSON.parse(response);
+
                 if (result.Success == true) {
 
-                    if (result.ApiResultModel.message != "") {
-                        hideLoader();
-                        new PNotify({
-                            title: 'Error',
-                            text: result.ApiResultModel.message,
-                            type: 'error',
-                            styling: 'bootstrap3'
-                        });
-                    }
-                    else if (result.ApiResultModel.message == "") {
+                    if (result.ApiResultModel.message == "") {
                         if (appType == "S")
-                        hideLoader();
+                            hideLoader();
                         new PNotify({
                             title: 'Success',
                             text: "Appointment has been scheduled successfully. Reference #:"+result.ApiResultModel.ID,
                             type: 'info',addclass: 'dark',
                             styling: 'bootstrap3'
                         });
-
+                        var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + $("#doctorid").val() + '&message=Live-App-created-'+result.ApiResultModel.ID;
+                        $.post(cCallLogUrl);
 
                         if (appType == "S")
                         {
@@ -1048,13 +1074,26 @@
                             localStorage.setItem("apptime",new Date());
 
 
-                        createConsultFromPatient($("#doctorid").val(), patientID, result.ApiResultModel.ID);}
+                            createConsultFromPatient($("#doctorid").val(), patientID, result.ApiResultModel.ID);}
 
 
 
 
                     }
                 }
+                else
+                { hideLoader();
+                new PNotify({
+                    title: 'Error',
+                    text: 'Error in appointment saving.',
+                    type: 'error',
+                    styling: 'bootstrap3'
+                });
+
+                var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + $("#doctorid").val() + '&message=Err-in-app-save';
+                $.post(cCallLogUrl);
+                }
+
 
             },
             error: errorRes
@@ -1105,9 +1144,8 @@
                         });*/
 
                         //Log consultion creation sucess
-                        var cCallLogUrl = '@Url.Action("ConsultCreatedbyPatient", "UserChat")?doctorId=' + doctorID;
-                        $.post(cCallLogUrl);
-
+                        var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=consult-created-by-patient';
+                    $.post(cCallLogUrl);
                         if(appType="L")
                         {
                             debugger;
@@ -1125,7 +1163,10 @@
                                 }
                             }
                             debugger;
+
                             if(oDocInfo!=null){
+                                var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=consultID-sent-to-doctor';
+                                $.post(cCallLogUrl);
                                 chat.server.sendMessageToDoctor(
                                 {
                                     SenderId: '@SessionHandler.UserInfo.Id',
@@ -1138,6 +1179,7 @@
                                     Message: JSON.stringify({ status: 'consultID', name: consultID }),
                                     UserGroup: 'doctors'
                                 });
+
                                 hideLoader();
                                 new PNotify({
                                     title: 'Success',
@@ -1148,6 +1190,9 @@
                             }
                             else {
                                 new PNotify({ title: 'Error', text: "Doctor is offline. Please try later", type: 'error', styling: 'bootstrap3' });
+
+                                var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=doctor-is-offline-for-live-call';
+                                $.post(cCallLogUrl);
                                 return false;
                             }
                             debugger;
@@ -1162,12 +1207,20 @@
                           //  $.post(cUrlReadyForCall, function (oResp) {
                                 if (tokboxInfo!="0")
                                 {
-                                    //Redirect patient to call
-                                    window.location = '@Url.Action("Index","UserChat")?tokboxInfo='+tokboxInfo;
+                                    var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=patient-ready-for-VC';
+                                    $.post( cCallLogUrl, function() {
+                                        //Redirect patient to call
+                                        window.location = '@Url.Action("Index","UserChat")?tokboxInfo='+tokboxInfo;
+                                    });
+
+
 
                                 }
                                 else
-                                { new PNotify({ title: 'Error', text: "Error in getting tokbox info.", type: 'error', styling: 'bootstrap3' });}
+                                { new PNotify({ title: 'Error', text: "Error in getting tokbox info.", type: 'error', styling: 'bootstrap3' });
+                                var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=Error-in-getting-tokbox-info';
+                                $.post(cCallLogUrl);
+                                }
                           // });
 
                             //Redirect User for video chat
